--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 </head>
 <body>
   <h1>Deezer Web Player</h1>
-  <input type="search" id="search-input" placeholder="Search for a track">
-  <button id="search-button">Search</button>
-  <div id="track-list"></div>
-  <audio id="audio-player" controls></audio>
+  <ul id="track-list"></ul>
 
   <script src="script.js"></script>
 </body>
