Add React to the Frontend

--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Deezer Web Player</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <h1>Deezer Web Player</h1>
-  <ul id="track-list"></ul>
-
-  <script src="script.js"></script>
-</body>
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GuessTheSong</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
